# walrus-messenger

./: AGENTS.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  ROADMAP.md  TODO.txt  config.yaml  deploy.sh  docker-compose.yml  openapi.yaml
.github/workflows/: deploy.yml  mr-checks.yml
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/server/: Cargo.toml
crates/server/migrations/: 0000_init.down.sql  0000_init.up.sql  0001_chat_activity_and_read_cursor.down.sql  0001_chat_activity_and_read_cursor.up.sql
crates/server/src/: config.rs  error.rs  main.rs
crates/server/src/auth/: error.rs  mod.rs  token.rs  utils.rs
crates/server/src/database/: commands.rs  connection.rs  mod.rs  queries.rs  schema.rs  utils.rs
crates/server/src/models/: chat.rs  listing.rs  message.rs  mod.rs  resource.rs  session.rs  user.rs
crates/server/src/server/: constants.rs  mod.rs  rate_limit.rs  router.rs  session.rs  state.rs
crates/server/src/tests/: db.rs
templates/: .env  docker-compose.yml  poll-deploy.sh  walrus-poll-deploy.service  walrus-poll-deploy.timer
