[package]
name = "walrus-server"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1.40", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
futures = "0.3"
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "fast-rng"] }
strum = "0.26"
strum_macros = "0.26"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "uuid", "derive", "macros", "chrono", "ipnetwork", "migrate"] }
argon2 = "0.5"
rand = "0.8"
once_cell = "1.20"
base64 = "0.22"
ipnetwork = "0.20"
governor = "0.10"
dashmap = "6.1"
